<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#333333"
                android:padding="24dp"
                android:text="@string/cat4_q2_question"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF8E1"
                android:orientation="vertical"
                android:padding="36dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/option1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/bg_radio_option"
                        android:buttonTint="#333333"
                        android:padding="14dp"
                        android:text="@string/cat4_q2_option1"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/option2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_radio_option"
                        android:buttonTint="#333333"
                        android:layout_marginBottom="30dp"
                        android:padding="14dp"
                        android:text="@string/cat4_q2_option2"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/option3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_radio_option"
                        android:buttonTint="#333333"
                        android:layout_marginBottom="30dp"
                        android:padding="14dp"
                        android:text="@string/cat4_q2_option3"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/option4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_radio_option"
                        android:buttonTint="#333333"
                        android:padding="14dp"
                        android:text="@string/cat4_q2_option4"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_blue"
        android:text="@string/next_button_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>